# unicode-character-database

./: .gitignore  Cargo.toml  README.md
scripts/: generate.sh
src/: age.rs  bidi_class.rs  bidi_mirroring_glyph.rs  case_folding_simple.rs  case_mapping.rs  general_category.rs  grapheme_cluster_break.rs  jamo_short_name.rs  joining_type.rs  lib.rs  perl_word.rs  property_bool.rs  property_names.rs  property_values.rs  script.rs  script_extension.rs  sentence_break.rs  word_break.rs
